--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,4 @@ pyotp==2.9.0
 fastapi==0.109.0
 uvicorn==0.27.0
 python-dotenv==1.0.0
-pandas==2.1.4
-beautifulsoup4==4.12.3
-python-multipart==0.0.6
+pandas>=2.2.0
