--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,135 @@
-requests==2.31.0
+aiodns==3.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+altair==5.5.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.9.0
+APScheduler==3.11.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bidict==0.23.1
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==5.5.2
+ccxt==4.5.1
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-SmartApi-Python==1.3.5
+contourpy==1.3.1
+cryptography==45.0.6
+curl_cffi==0.11.4
+cycler==0.12.1
+dateutils==0.6.12
+delta-rest-client==1.0.13
+et_xmlfile==2.0.0
+exchange_calendars==4.11.1
+fastapi==0.121.2
+Flask==3.1.0
+Flask-SocketIO==5.5.1
+fonttools==4.57.0
+frozendict==2.4.6
+frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+gspread==6.2.1
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+korean-lunar-calendar==0.3.1
+loguru==0.7.3
+logzero==1.7.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+MetaTrader5==5.0.5120
+multidict==6.6.4
+multitasking==0.0.11
+narwhals==1.33.0
+nselib==1.9
+nsepython==2.97
+nsetools==2.0.1
+numpy==2.2.4
+oauth2client==4.1.3
+oauthlib==3.3.1
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+pandas_market_calendars==5.1.1
+pbkdf2==1.3
+peewee==3.18.1
+pillow==11.1.0
+platformdirs==4.3.8
+plotly==6.2.0
+propcache==0.3.2
+protobuf==5.29.4
+py5paisa==0.7.21.2
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycares==4.10.0
+pycparser==2.22
+pycryptodome==3.22.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+PyJWT==2.3.0
+pyluach==2.3.0
+pyngrok==7.2.3
 pyotp==2.9.0
-fastapi==0.109.0
-uvicorn==0.27.0
-python-dotenv==1.0.0
-pandas>=2.2.0
-websocket-client==1.6.4
-beautifulsoup4==4.12.3
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-engineio==4.12.0
+python-socketio==5.13.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.5
+requests-oauthlib==2.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+schedule==1.2.2
+scipy==1.16.2
+setuptools==78.1.0
+simple-websocket==1.1.0
+six==1.17.0
+smartapi-python==1.5.5
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+starlette==0.49.3
+streamlit==1.44.1
+streamlit-autorefresh==1.0.1
+tenacity==9.1.2
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.2
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.13.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.3.0
+uvicorn==0.38.0
+watchdog==6.0.0
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+win32_setctime==1.2.0
+wsproto==1.2.0
+XlsxWriter==3.2.2
+yarl==1.20.1
+yfinance==0.2.63
